# Movie_Vote_Bot

./: .gitignore  CIP_module.py  README.md  alarm_bot.py  bot.py  bot_example.py  bridge.py  movie_vote.py  pyproject.toml
