[tool.poetry]
name = "sitcon-telegrambot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "sitcon_telegrambot"}]

[tool.poetry.dependencies]
python = "^3.8"
pytelegrambotapi = "^4.12.0"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
